Html referente ao Sistema Reclame Aqui 24-05-2021

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="login">
 
-            <img src="">
+            <img src="imagens/img_login.png">
             <a style="text-decoration: none;" href="">Entrar</a>
 
         </div>
@@ -53,7 +53,7 @@
 
     </div>
 
-    <div onclick="document.getElementById('menu-dropdown').style.display = 'block'" id="menu-dropdown">
+    <div id="menu-dropdown">
 
         <ul>
 
@@ -62,6 +62,15 @@
             <li id="categoria-item"><p>Alimentos e Bebidas</p></li>
             <li id="categoria-item"><p>Educação</p></li>
         </ul>
+
+    </div>
+
+    <div class="barra-pesquisa">
+
+        <img src="">
+        <p>Pesquise sobre as reputações das marcas ou faça uma reclamação!</p>
+        <input type="text" placeholder="Busque por uma empresa">
+        <a href=""><img class="img-pesquisa" src="imagens/img-pesquisa.png"></a>
 
     </div>
 
