Html referente ao Login do sistema Reclame Aqui 25-05-2021

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
         <div class="login">
 
-            <a class="cadastro" href="">Cadastre-se</a>
+            <a class="cadastro" href="cadastro.html">Cadastre-se</a>
 
         </div>
 
@@ -65,7 +65,7 @@
 
     </div>
 
-    <h2>Que bom que você vai usar o Reclame AQUI :)</h2>
+    <h2>Que bom que você vai usar o Sistema de Reclamação :)</h2>
     <p class="p-login">Insira o login e senha para acessar sua área do consumidor ou área da empresa.</p>
 
     <div class="form-login">
@@ -82,7 +82,7 @@
     <div class="cadastro">
 
         <p>Não tem uma conta?</p>
-        <button>Cadastre-se aqui</button>
+        <a href="cadastro.html"><button>Cadastre-se aqui</button></a>
     
     </div>
 
@@ -92,6 +92,8 @@
         <p>Todos os direitos reservados!</p>
 
     </footer>
+
+    <div class="clear"></div>
 
 </body>
 </html>
